# xkcd-parser

./: .gitignore  README.md  parsed.json  parser.py  pyproject.toml
.github/workflows/: python-app.yml
xkcd_parser/: parser.py
