[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "xkcd-parser"
version = "0.0.1a"
readme = "README.md"
dependencies = [
    "requests>=2.32.4"
]
authors = [
    {name = "Sergey Sitnikov", email = "aqendo@disroot.org"}
]
license = "GPL-3.0-or-later"

[project.scripts]
xkcd_parser = "xkcd_parser.parser:cli"